--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=7000
+# server.port=7000
 
 spring.redis.host=redis-18663.c295.ap-southeast-1-1.ec2.cloud.redislabs.com
 spring.redis.port=18663
